--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Cs50 Web Week1</title>
 </head>
 <body>
-    <h1 style="color:red;">Hello World!!</h1>
+    <h1 style="color:blue;">Hello World!!</h1>
     <p>Hello Cs50 Web</p>
 </body>
 </html>
